--- a/helloWorld/home/templates/base.html
+++ b/helloWorld/home/templates/base.html
@@ -18,6 +18,7 @@
             <li class="pure-menu-selected"><a href="{% url 'home:home' %}">Início</a></li>
             <li><a href="#">Cursos</a></li>
             <li><a href="{% url 'home:contacts' %}">Contato</a></li>
+            <li><a href="/admin/">Admin</a></li>
         </ul>
     </div>
 </div>
