--- a/helloWorld/home/templates/base.html
+++ b/helloWorld/home/templates/base.html
@@ -7,7 +7,7 @@
     <meta name="description" content="Simple MOOC - Uma simples plataforma de ensino a distância" />
     <title>Simple MOOC</title>
     <link rel="stylesheet" href="http://yui.yahooapis.com/pure/0.3.0/pure-min.css">
-    <link rel="stylesheet" href="{% static 'css/styles.css' %}" />
+    <link rel="stylesheet" href="{% static 'css/styles2.css' %}" />
 </head>
 <body>
 
@@ -18,6 +18,11 @@
             <li class="pure-menu-selected"><a href="{% url 'home:home' %}">Início</a></li>
             <li><a href="{% url 'courses:index' %}">Cursos</a></li>
             <li><a href="{% url 'home:contacts' %}">Contato</a></li>
+            {% if user.is_authenticated %}
+            <li><a href="{% url 'accounts:logout' %}">Sair</a></li>
+            {% else %}
+            <li><a href="{% url 'accounts:login' %}">Entrar</a></li>
+            {% endif %}
             <li><a href="/admin/">Admin</a></li>
         </ul>
     </div>
