--- a/helloWorld/home/templates/base.html
+++ b/helloWorld/home/templates/base.html
@@ -7,7 +7,7 @@
     <meta name="description" content="Simple MOOC - Uma simples plataforma de ensino a distância" />
     <title>Simple MOOC</title>
     <link rel="stylesheet" href="http://yui.yahooapis.com/pure/0.3.0/pure-min.css">
-    <link rel="stylesheet" href="{% static 'css/styles2.css' %}" />
+    <link rel="stylesheet" href="{% static 'css/styles3.css' %}" />
 </head>
 <body>
 
@@ -19,6 +19,7 @@
             <li><a href="{% url 'courses:index' %}">Cursos</a></li>
             <li><a href="{% url 'home:contacts' %}">Contato</a></li>
             {% if user.is_authenticated %}
+            <li><a href="{% url 'accounts:dashboard' %}">Painel ({{ user }})</a></li>
             <li><a href="{% url 'accounts:logout' %}">Sair</a></li>
             {% else %}
             <li><a href="{% url 'accounts:login' %}">Entrar</a></li>
