--- a/helloWorld/home/templates/base.html
+++ b/helloWorld/home/templates/base.html
@@ -29,6 +29,15 @@
     </div>
 </div>
 <div class="content">
+    {% if messages %}
+    <div class="pure-g-r content-ribbon">
+        <aside class="pure-u-1">
+            {% for message in messages %}
+            <p>{{ message }}</p>
+            {% endfor %}
+        </aside>
+    </div>
+    {% endif %}
 {% block content %}
 {% endblock content %}
     <div class="footer">
