Aplicacao do forum de duvidas com ajax

--- a/helloWorld/home/templates/base.html
+++ b/helloWorld/home/templates/base.html
@@ -17,6 +17,7 @@
         <ul>
             <li class="pure-menu-selected"><a href="{% url 'home:home' %}">Início</a></li>
             <li><a href="{% url 'courses:index' %}">Cursos</a></li>
+            <li><a href="{% url 'forum:index' %}">Forum</a></li>
             <li><a href="{% url 'home:contacts' %}">Contato</a></li>
             {% if user.is_authenticated %}
             <li><a href="{% url 'accounts:dashboard' %}">Painel ({{ user }})</a></li>
@@ -45,5 +46,7 @@
     </div>
 </div>
 <script src="http://yui.yahooapis.com/3.12.0/build/yui/yui-min.js"></script>
+<script src="//ajax.googleapis.com/ajax/libs/jquery/2.1.1/jquery.min.js"></script>
+{% block scripts %}{% endblock %}
 </body>
 </html>
